Fix bottom footer text overflow

--- a/css/styleguide.scss
+++ b/css/styleguide.scss
@@ -548,6 +548,7 @@ footer.site {
     color: $color-white;
     font-size: $small-font-size;
     margin-top: 0;
+    overflow: hidden;
   }
 
   a {
